--- a/vercel.json
+++ b/vercel.json
@@ -1,22 +1,8 @@
 {
-  "version": 2,
-  "builds": [
+  "rewrites": [
     {
-      "src": "index.php",
-      "use": "@vercel/php"
-    },
-    {
-      "src": "app/**/*.php",
-      "use": "@vercel/php"
-    }
-  ],
-  "routes": [
-    {
-      "handle": "filesystem"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.php?url=$1"
+      "source": "/(.*)",
+      "destination": "/index.php"
     }
   ]
 }
