--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,10 @@
 {
     "version": 2,
-    "builds": [
-        {
-            "src": "api/index.php",
-            "use": "@vercel/php"
-        }
-    ],
+    "functions": {
+    "api/*.php": {
+      "runtime": "vercel-php@8.1.25"
+    }
+  },
     "routes": [
         {
             "src": "/public/(.*)",
